--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "livereload": "0.8.0",
     "lodash": "4.17.15",
     "mustache": "3.0.3",
+    "nodejs": "0.0.0",
     "open": "6.4.0",
     "reveal.js": "3.8.0",
     "serve-favicon": "2.5.0",
