--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "yargs-parser": "14.0.0"
   },
   "optionalDependencies": {
-    "puppeteer": "1.19.0"
+    "puppeteer": "^1.20.0"
   },
   "devDependencies": {
     "bron": "1.1.0",
