--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server",
     "cli"
   ],
-  "version": "3.3.0",
+  "version": "3.3.1",
   "repository": {
     "type": "git",
     "url": "git://github.com/webpro/reveal-md.git"
@@ -34,12 +34,10 @@
     "express": "4.17.1",
     "fs-extra": "8.1.0",
     "glob": "7.1.4",
-    "got": "9.6.0",
     "highlight.js": "9.15.10",
-    "livereload": "0.8.0",
+    "livereload": "0.8.2",
     "lodash": "4.17.15",
-    "mustache": "3.0.3",
-    "nodejs": "0.0.0",
+    "mustache": "3.1.0",
     "open": "6.4.0",
     "reveal.js": "3.8.0",
     "serve-favicon": "2.5.0",
@@ -49,14 +47,14 @@
     "yargs-parser": "14.0.0"
   },
   "optionalDependencies": {
-    "puppeteer": "^1.20.0"
+    "puppeteer": "1.19.0"
   },
   "devDependencies": {
     "bron": "1.1.0",
-    "eslint": "6.3.0",
-    "eslint-config-prettier": "6.3.0",
+    "eslint": "6.5.1",
+    "eslint-config-prettier": "6.4.0",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-prettier": "3.1.1",
     "prettier": "1.18.2"
   },
   "engines": {
