--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "debug": "4.1.1",
     "express": "4.17.1",
     "fs-extra": "8.1.0",
+    "fund": "1.0.0",
     "glob": "7.1.4",
     "highlight.js": "9.15.10",
     "livereload": "0.8.2",
