--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server",
     "cli"
   ],
-  "version": "3.3.1",
+  "version": "6.1.1",
   "repository": {
     "type": "git",
     "url": "git://github.com/webpro/reveal-md.git"
@@ -24,41 +24,43 @@
     "bin",
     "lib"
   ],
+  "type": "module",
   "scripts": {
-    "test": "bron test/*.spec.js",
-    "lint": "eslint lib/**/*.js",
-    "format": "prettier --write lib/**/*.js bin/*.js test/*.js *.md"
+    "test": "node --test test/*.spec.js",
+    "lint": "eslint lib test",
+    "format": "prettier --write lib/**/*.js bin/*.js test/*.js *.md",
+    "release": "release-it"
   },
   "dependencies": {
-    "debug": "4.1.1",
-    "express": "4.18.2",
-    "fs-extra": "8.1.0",
-    "fund": "1.0.0",
-    "glob": "7.1.4",
-    "highlight.js": "9.15.10",
-    "livereload": "0.8.2",
+    "debug": "4.3.4",
+    "express": "4.19.2",
+    "fs-extra": "11.2.0",
+    "glob": "10.3.12",
+    "highlight.js": "11.9.0",
+    "json5": "2.2.3",
+    "livereload": "0.9.3",
     "lodash": "4.17.21",
-    "mustache": "3.1.0",
-    "open": "6.4.0",
-    "reveal.js": "4.3.0",
+    "mermaid": "10.9.0",
+    "mustache": "4.2.0",
+    "open": "10.1.0",
+    "reveal.js": "5.1.0",
     "serve-favicon": "2.5.0",
-    "try-require": "1.2.1",
-    "update-notifier": "6.0.2",
-    "yaml-front-matter": "4.0.0",
-    "yargs-parser": "14.0.0"
+    "update-notifier": "7.0.0",
+    "yaml-front-matter": "4.1.1",
+    "yargs-parser": "21.1.1"
   },
   "optionalDependencies": {
-    "puppeteer": "1.19.0"
+    "puppeteer": "22.6.4"
   },
   "devDependencies": {
-    "bron": "1.1.0",
-    "eslint": "6.5.1",
-    "eslint-config-prettier": "6.4.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-prettier": "3.1.1",
-    "prettier": "1.18.2"
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "prettier": "3.2.5",
+    "release-it": "17.1.1"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=18"
   }
 }
